[package]
name = "newchai"
version = "0.1.0"
authors = ["ms747 <mayur.shah.ha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = true
opt-level = 3
debug = false
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
